Replace buttons with anchor tags for navigation

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     
             
             <div class="cta-buttons">
-                <button class="cta-btn" onclick="scrollToSection('engineering')">
+                <a class="cta-btn" href="#overview">
                     <i class="fas fa-wrench"></i> Explore the Design
-                </button>
-                <button class="cta-btn" onclick="scrollToSection('dashboards')">
+                </a>
+                <a class="cta-btn" href="#dashboards">
                     <i class="fas fa-sync-alt"></i> Explore the System
-                </button>
-                <button class="cta-btn" onclick="scrollToSection('team')">
+                </a>
+                <a class="cta-btn" href="#team">
                     <i class="fas fa-users"></i> Meet the Team
-                </button>
+                </a>
             </div>
         </div>
     </section>
