Update iframe sources and image filename

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <div class="subsystem">
                     <div class="subsystem-visual">
                         <div class="cad-render">
-                            <iframe scrolling='no' frameborder='0' allowfullscreen='true' src='https://www.3dcontentcentral.com/external-site-embed.aspx?format=3D&catalogid=171&modelid=3203607&width=250&height=250&edraw=true' name='PreviewFrame3D' id='PreviewFrame3D' width='400' height='355'></iframe><br/><a href='https://www.3dcontentcentral.com/download-model.aspx?catalogid=171&id=3203607'>Download</a>
+                           <iframe scrolling='no' frameborder='0' allowfullscreen='true' src='https://www.3dcontentcentral.com/external-site-embed.aspx?format=3D&catalogid=171&modelid=3203608&width=250&height=250&edraw=true' name='PreviewFrame3D' id='PreviewFrame3D' width='400' height='355'></iframe><br/><a href='https://www.3dcontentcentral.com/download-model.aspx?catalogid=171&id=3203608'>Download</a> 
                         </div>
                     </div>
                     <div class="subsystem-content">
@@ -614,8 +614,7 @@
                 <div class="subsystem">
                     <div class="subsystem-visual">
                         <div class="cad-render">
-                            <i class="fas fa-industry"></i>
-                            <p>Arc Furnace 3D CAD</p>
+                           <iframe scrolling='no' frameborder='0' allowfullscreen='true' src='https://www.3dcontentcentral.com/external-site-embed.aspx?format=3D&catalogid=171&modelid=3203607&width=250&height=250&edraw=true' name='PreviewFrame3D' id='PreviewFrame3D' width='400' height='355'></iframe><br/><a href='https://www.3dcontentcentral.com/download-model.aspx?catalogid=171&id=3203607'>Download</a>
                         </div>
                     </div>
                     <div class="subsystem-content">
@@ -883,7 +882,7 @@
             <h2 class="section-title">The Waste2Watt Crew</h2>
             
             <div class="team-grid">
-              <img src="Team.jpg" alt="Waste2Watt Team Photo" style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.2);">
+              <img src="team.jpg" alt="Waste2Watt Team Photo" style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.2);">
             </div>
         </div>
     </section>
