--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
             <h2 class="section-title">The Waste2Watt Crew</h2>
             
             <div class="team-grid">
-              <img src="team.jpg" alt="Waste2Watt Team Photo" style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.2);">
+              <img src="Team.jpg" alt="Waste2Watt Team Photo" style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.2);">
             </div>
         </div>
     </section>
