Add image and update mission impact section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <li><i class="fas fa-print"></i> <strong>3D-printing feedstock</strong> (plastics → filament)</li>
                         <li><i class="fas fa-cubes"></i> <strong>Structural materials</strong> (regolith composites → bricks, panels, insulation)</li>
                     </ul>
+                    <img src="full.jpg" alt="M-REGS System Diagram" class="overview-image" style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.2);">
                     <p class="mission-impact">
                         By reusing waste heat and recycling water & reducing usage of electricity, M-REGS directly supports 
                         NASA's mission goals: reducing habitat dependence on shipped electricity and water. 
