Update M-REGS terminology from 'Multi-Stream' to 'Modular'

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2 class="section-title">System Overview</h2>
                 <div class="overview-text">
                     <p class="lead">
-                        <strong>Waste2Watt is designing M-REGS → Multi-Stream Recycling and Energy Generation System.</strong>
+                        <strong>Waste2Watt is designing M-REGS → Modular Recycling and Energy Generation System.</strong>
                     </p>
                     <p>
                         M-REGS is an integrated recycling-to-energy system designed for Mars missions and Earth applications.
@@ -809,9 +809,9 @@
                             <h3 style="color: #63b3ed; margin-bottom: 12px;"><i class="fas fa-rocket"></i> Mars M-REGS System Architecture</h3>
                         </div>
                         <div class="version-features" style="background: linear-gradient(135deg, #1a1f2e, #2d3748); padding: 20px; border-radius: 12px; margin-bottom: 20px;">
-                            <p style="color: #e2e8f0; margin-bottom: 15px;">Complete M-REGS flowchart showing the full multi-stream recycling system</p>
+                            <p style="color: #e2e8f0; margin-bottom: 15px;">Complete M-REGS flowchart showing the full modular recycling system</p>
                             <ul style="color: #a0aec0; margin: 0; padding-left: 20px;">
-                                <li>Multi-stream recycling (plastics, metals, organics)</li>
+                                <li>Modular recycling (plastics, metals, organics)</li>
                                 <li>Regolith processing for construction materials</li>
                                 <li>Thermal integration with heat recovery loops</li>
                                 <li>Life support integration for habitat systems</li>
